--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.9.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "yup": "^0.28.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
