--- a/angular.json
+++ b/angular.json
@@ -10,23 +10,23 @@
           "style": "scss"
         }
       },
-      "root": "src/client",
-      "sourceRoot": "src/client",
+      "root": "client",
+      "sourceRoot": "client",
       "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist",
-            "index": "src/client/index.html",
-            "main": "src/client/main.ts",
-            "polyfills": "src/client/polyfills.ts",
-            "tsConfig": "src/client/tsconfig.app.json",
+            "index": "client/index.html",
+            "main": "client/main.ts",
+            "polyfills": "client/polyfills.ts",
+            "tsConfig": "client/tsconfig.app.json",
             "aot": true,
-            "assets": ["src/client/favicon.ico", "src/client/assets"],
+            "assets": ["client/favicon.ico", "client/assets"],
             "styles": [
-              "src/client/styles/base/normalize.css",
-              "src/client/styles/base/_global.scss"
+              "client/styles/base/normalize.css",
+              "client/styles/base/_global.scss"
             ],
             "scripts": []
           },
@@ -34,8 +34,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/client/environments/environment.ts",
-                  "with": "src/client/environments/environment.prod.ts"
+                  "replace": "client/environments/environment.ts",
+                  "with": "client/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -81,14 +81,14 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/client/test.ts",
-            "polyfills": "src/client/polyfills.ts",
-            "tsConfig": "src/client/tsconfig.spec.json",
-            "karmaConfig": "src/client/karma.conf.js",
-            "assets": ["src/client/favicon.ico", "src/client/assets"],
+            "main": "client/test.ts",
+            "polyfills": "client/polyfills.ts",
+            "tsConfig": "client/tsconfig.spec.json",
+            "karmaConfig": "client/karma.conf.js",
+            "assets": ["client/favicon.ico", "client/assets"],
             "styles": [
-              "src/client/styles/base/normalize.css",
-              "src/client/styles/base/_global.scss"
+              "client/styles/base/normalize.css",
+              "client/styles/base/_global.scss"
             ],
             "scripts": []
           }
@@ -97,9 +97,9 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "src/client/tsconfig.app.json",
-              "src/client/tsconfig.spec.json",
-              "src/client/e2e/tsconfig.json"
+              "client/tsconfig.app.json",
+              "client/tsconfig.spec.json",
+              "client/e2e/tsconfig.json"
             ],
             "exclude": ["**/node_modules/**"]
           }
@@ -107,7 +107,7 @@
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "src/client/e2e/protractor.conf.js",
+            "protractorConfig": "client/e2e/protractor.conf.js",
             "devServerTarget": "client:serve"
           },
           "configurations": {
