:fire: keeping only client code in this repo

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # compiled output
 dist/
 tmp/
-src/client/app/**/*.js
-src/client/app/**/*.js.map
+src/app/**/*.js
+src/app/**/*.js.map
 
 # dependencies
 node_modules/
