--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "caloudie",
+  "name": "caloudie-client",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node src/server/server.js",
-    "client": "ng serve",
-    "server": "nodemon src/server/server.js",
-    "build": "ng build --prod",
+    "start": "ng serve",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -21,12 +19,8 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "yup": "^0.28.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -34,11 +28,10 @@
     "@angular/cli": "~9.0.2",
     "@angular/compiler-cli": "~9.0.1",
     "@angular/language-service": "~9.0.1",
+    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
-    "cors": "^2.8.5",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
@@ -46,7 +39,6 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "nodemon": "^2.0.2",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
